# evm-dex-pool

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
contracts/ABI/: AlgebraPoolFeeInState.json  IUniswapV2Pair.json  IV2PairUint256.json  UniswapV2FactoryGetFeeOnlyPair.json  UniswapV2FactoryGetFeePool.json  UniswapV2FactoryPairFee.json  UniswapV2PairVolatileStableFeeInFactory.json  UniswapV2PairVolatileStableGetFee.json
skills/evm-dex-pool/: SKILL.md
src/: contracts.rs  contracts_rpc.rs  lib.rs  registry.rs  token_info.rs  utils.rs
src/collector/: block_source.rs  bootstrap.rs  config.rs  event_processor.rs  event_queue.rs  handle.rs  metrics.rs  mod.rs  multicall.rs  pool_fetcher.rs  unified_pool_updater.rs  websocket_listener.rs
src/erc4626/: fetcher.rs  mod.rs  standard.rs  verio_ip.rs
src/pool/: base.rs  mock.rs  mod.rs
src/v2/: factories.rs  fetcher.rs  mod.rs  pool.rs
src/v3/: bit_math.rs  fetcher.rs  full_math.rs  mod.rs  nearest_usable_tick.rs  pool.rs  sqrt_price_math.rs  swap_math.rs  tick_math.rs  utils.rs
tests/: collector_add_pools.rs
