[package]
name = "evm-dex-pool"
version = "0.1.0"
edition = "2021"
authors = ["danielNg25 <ndtr2000@gmail.com>"]
license = "MIT"
description = "Reusable EVM DEX pool implementations (UniswapV2, UniswapV3, ERC4626) with traits and math"

[features]
default = []
rpc = ["alloy/providers", "alloy/contract", "tokio"]

[dependencies]
alloy = { version = "1.0.30", features = ["sol-types", "rpc-types", "serde", "eips"] }
num-traits = "0.2"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"

# Only needed when rpc feature is enabled
tokio = { version = "1", features = ["sync"], optional = true }

[dev-dependencies]
uniswap_v3_math = "0.6.0"
tokio = { version = "1", features = ["full"] }
